// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`gardener-dashboard deployment kubeconfig should render the template 1`] = `
{
  "name": "gardener-dashboard-secret-kubeconfig",
  "secret": {
    "secretName": "gardener-dashboard-kubeconfig",
  },
}
`;

exports[`gardener-dashboard deployment kubeconfig should render the template 2`] = `
{
  "mountPath": "/etc/gardener-dashboard/secrets/kubeconfig",
  "name": "gardener-dashboard-secret-kubeconfig",
  "readOnly": true,
}
`;

exports[`gardener-dashboard deployment kubeconfig should render the template 3`] = `
{
  "name": "KUBECONFIG",
  "value": "/etc/gardener-dashboard/secrets/kubeconfig/kubeconfig",
}
`;

exports[`gardener-dashboard deployment should not project service account token if disabled 1`] = `
[
  {
    "configMap": {
      "defaultMode": 420,
      "items": [
        {
          "key": "config.yaml",
          "path": "config.yaml",
        },
      ],
      "name": "gardener-dashboard-configmap",
    },
    "name": "gardener-dashboard-config",
  },
  {
    "configMap": {
      "defaultMode": 444,
      "items": [
        {
          "key": "login-config.json",
          "path": "login-config.json",
        },
      ],
      "name": "gardener-dashboard-configmap",
    },
    "name": "gardener-dashboard-login-config",
  },
  {
    "name": "gardener-dashboard-sessionsecret",
    "secret": {
      "secretName": "gardener-dashboard-sessionsecret",
    },
  },
  {
    "name": "gardener-dashboard-oidc",
    "secret": {
      "secretName": "gardener-dashboard-oidc",
    },
  },
]
`;

exports[`gardener-dashboard deployment should not project service account token if disabled 2`] = `
[
  {
    "mountPath": "/etc/gardener-dashboard",
    "name": "gardener-dashboard-config",
  },
  {
    "mountPath": "/app/public/login-config.json",
    "name": "gardener-dashboard-login-config",
    "subPath": "login-config.json",
  },
  {
    "mountPath": "/etc/gardener-dashboard/secrets/session",
    "name": "gardener-dashboard-sessionsecret",
    "readOnly": true,
  },
  {
    "mountPath": "/etc/gardener-dashboard/secrets/oidc",
    "name": "gardener-dashboard-oidc",
    "readOnly": true,
  },
]
`;

exports[`gardener-dashboard deployment should render the template w/ \`client_secret\` 1`] = `
[
  {
    "name": "GARDENER_CONFIG",
    "value": "/etc/gardener-dashboard/config.yaml",
  },
  {
    "name": "METRICS_PORT",
    "value": "9050",
  },
  {
    "name": "POD_NAME",
    "valueFrom": {
      "fieldRef": {
        "fieldPath": "metadata.name",
      },
    },
  },
  {
    "name": "POD_NAMESPACE",
    "valueFrom": {
      "fieldRef": {
        "fieldPath": "metadata.namespace",
      },
    },
  },
]
`;

exports[`gardener-dashboard deployment should render the template w/o \`client_secret\` 1`] = `
[
  {
    "name": "GARDENER_CONFIG",
    "value": "/etc/gardener-dashboard/config.yaml",
  },
  {
    "name": "METRICS_PORT",
    "value": "9050",
  },
  {
    "name": "POD_NAME",
    "valueFrom": {
      "fieldRef": {
        "fieldPath": "metadata.name",
      },
    },
  },
  {
    "name": "POD_NAMESPACE",
    "valueFrom": {
      "fieldRef": {
        "fieldPath": "metadata.namespace",
      },
    },
  },
]
`;

exports[`gardener-dashboard deployment should render the template with default values 1`] = `
{
  "apiVersion": "apps/v1",
  "kind": "Deployment",
  "metadata": {
    "labels": {
      "app.kubernetes.io/component": "dashboard",
      "app.kubernetes.io/instance": "gardener-dashboard",
      "app.kubernetes.io/managed-by": "Helm",
      "app.kubernetes.io/name": "gardener-dashboard",
      "helm.sh/chart": "gardener-dashboard-runtime-0.1.0",
      "high-availability-config.resources.gardener.cloud/type": "server",
    },
    "name": "gardener-dashboard",
    "namespace": "garden",
  },
  "spec": {
    "replicas": 1,
    "selector": {
      "matchLabels": {
        "app.kubernetes.io/component": "dashboard",
        "app.kubernetes.io/name": "gardener-dashboard",
      },
    },
    "template": {
      "metadata": {
        "annotations": {
          "checksum/configmap-gardener-dashboard-config": StringMatching /\\[0-9a-f\\]\\{64\\}/,
          "checksum/secret-gardener-dashboard-oidc": StringMatching /\\[0-9a-f\\]\\{64\\}/,
          "checksum/secret-gardener-dashboard-sessionSecret": StringMatching /\\[0-9a-f\\]\\{64\\}/,
        },
        "labels": {
          "app.kubernetes.io/component": "dashboard",
          "app.kubernetes.io/instance": "gardener-dashboard",
          "app.kubernetes.io/managed-by": "Helm",
          "app.kubernetes.io/name": "gardener-dashboard",
          "helm.sh/chart": "gardener-dashboard-runtime-0.1.0",
          "networking.gardener.cloud/to-dns": "allowed",
          "networking.gardener.cloud/to-public-networks": "allowed",
          "networking.resources.gardener.cloud/to-virtual-garden-kube-apiserver-tcp-443": "allowed",
        },
      },
      "spec": {
        "containers": [
          {
            "args": [
              "--max-old-space-size=920",
              "server.js",
            ],
            "env": [
              {
                "name": "GARDENER_CONFIG",
                "value": "/etc/gardener-dashboard/config.yaml",
              },
              {
                "name": "METRICS_PORT",
                "value": "9050",
              },
              {
                "name": "POD_NAME",
                "valueFrom": {
                  "fieldRef": {
                    "fieldPath": "metadata.name",
                  },
                },
              },
              {
                "name": "POD_NAMESPACE",
                "valueFrom": {
                  "fieldRef": {
                    "fieldPath": "metadata.namespace",
                  },
                },
              },
            ],
            "image": "europe-docker.pkg.dev/gardener-project/releases/gardener/dashboard:1.26.0-dev-4d529c1",
            "imagePullPolicy": "IfNotPresent",
            "livenessProbe": {
              "failureThreshold": 6,
              "initialDelaySeconds": 15,
              "periodSeconds": 20,
              "successThreshold": 1,
              "tcpSocket": {
                "port": "http",
              },
              "timeoutSeconds": 5,
            },
            "name": "gardener-dashboard",
            "ports": [
              {
                "containerPort": 8080,
                "name": "http",
                "protocol": "TCP",
              },
              {
                "containerPort": 9050,
                "name": "metrics",
                "protocol": "TCP",
              },
            ],
            "readinessProbe": {
              "failureThreshold": 6,
              "httpGet": {
                "path": "/healthz",
                "port": "http",
              },
              "initialDelaySeconds": 5,
              "periodSeconds": 10,
              "successThreshold": 1,
              "timeoutSeconds": 5,
            },
            "resources": {
              "requests": {
                "cpu": "100m",
                "memory": "350Mi",
              },
            },
            "volumeMounts": [
              {
                "mountPath": "/etc/gardener-dashboard",
                "name": "gardener-dashboard-config",
              },
              {
                "mountPath": "/app/public/login-config.json",
                "name": "gardener-dashboard-login-config",
                "subPath": "login-config.json",
              },
              {
                "mountPath": "/etc/gardener-dashboard/secrets/session",
                "name": "gardener-dashboard-sessionsecret",
                "readOnly": true,
              },
              {
                "mountPath": "/var/run/secrets/projected/serviceaccount",
                "name": "service-account-token",
                "readOnly": true,
              },
              {
                "mountPath": "/etc/gardener-dashboard/secrets/oidc",
                "name": "gardener-dashboard-oidc",
                "readOnly": true,
              },
            ],
          },
        ],
        "restartPolicy": "Always",
        "serviceAccountName": "gardener-dashboard",
        "volumes": [
          {
            "configMap": {
              "defaultMode": 420,
              "items": [
                {
                  "key": "config.yaml",
                  "path": "config.yaml",
                },
              ],
              "name": "gardener-dashboard-configmap",
            },
            "name": "gardener-dashboard-config",
          },
          {
            "configMap": {
              "defaultMode": 444,
              "items": [
                {
                  "key": "login-config.json",
                  "path": "login-config.json",
                },
              ],
              "name": "gardener-dashboard-configmap",
            },
            "name": "gardener-dashboard-login-config",
          },
          {
            "name": "gardener-dashboard-sessionsecret",
            "secret": {
              "secretName": "gardener-dashboard-sessionsecret",
            },
          },
          {
            "name": "gardener-dashboard-oidc",
            "secret": {
              "secretName": "gardener-dashboard-oidc",
            },
          },
          {
            "name": "service-account-token",
            "projected": {
              "sources": [
                {
                  "serviceAccountToken": {
                    "expirationSeconds": 43200,
                    "path": "token",
                  },
                },
              ],
            },
          },
        ],
      },
    },
  },
}
`;

exports[`gardener-dashboard deployment should render the template with node options 1`] = `
[
  "--max-old-space-size=460",
  "--expose-gc",
  "--trace-gc",
  "--gc-interval=100",
  "server.js",
]
`;

exports[`gardener-dashboard deployment when github is configured should render github secret volume and volumeMount 1`] = `
{
  "name": "gardener-dashboard-github",
  "secret": {
    "secretName": "gardener-dashboard-github",
  },
}
`;

exports[`gardener-dashboard deployment when github is configured should render github secret volume and volumeMount 2`] = `
{
  "mountPath": "/etc/gardener-dashboard/secrets/github",
  "name": "gardener-dashboard-github",
  "readOnly": true,
}
`;

exports[`gardener-dashboard deployment when virtual garden is enabled should render the template 1`] = `
{
  "name": "service-account-token",
  "projected": {
    "sources": [
      {
        "serviceAccountToken": {
          "audience": "https://identity.garden.example.org",
          "expirationSeconds": 3600,
          "path": "token",
        },
      },
    ],
  },
}
`;

exports[`gardener-dashboard deployment when virtual garden is enabled should render the template 2`] = `
{
  "mountPath": "/var/run/secrets/projected/serviceaccount",
  "name": "service-account-token",
  "readOnly": true,
}
`;

exports[`gardener-dashboard deployment when virtual garden is enabled should use the volume mount based kubeconfig 1`] = `
{
  "name": "kubeconfig",
  "projected": {
    "sources": [
      {
        "secret": {
          "items": [
            {
              "key": "kubeconfig",
              "path": "kubeconfig",
            },
          ],
          "name": "generic-token-kubeconfig",
          "optional": false,
        },
      },
      {
        "secret": {
          "items": [
            {
              "key": "token",
              "path": "token",
            },
          ],
          "name": "access-dashboard",
          "optional": false,
        },
      },
    ],
  },
}
`;

exports[`gardener-dashboard deployment when virtual garden is enabled should use the volume mount based kubeconfig 2`] = `
{
  "mountPath": "/var/run/secrets/gardener.cloud",
  "name": "kubeconfig",
  "readOnly": true,
}
`;

exports[`gardener-dashboard deployment when virtual garden is enabled should use the volume mount based kubeconfig 3`] = `
{
  "name": "KUBECONFIG",
  "value": "/var/run/secrets/gardener.cloud/kubeconfig",
}
`;
